# vllm-flashmoe-a40-workspace

./: AGENTS.md  README.md  WORKSPACE_SNAPSHOT.md  architecture.html  architecture.md  plan.md
FlashMoE/: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  quickstart.py
FlashMoE/csrc/include/flashmoe/: bootstrap.cuh  combine.cuh  context.cuh  dispatch.cuh  flashmoe.cuh  gate.cuh  moe.cuh  os.cuh  processor.cuh  scheduler.cuh  subscriber.cuh  tile.cuh
FlashMoE/csrc/include/flashmoe/experimental/: topo.cuh
FlashMoE/csrc/include/flashmoe/infra/: activation.cuh  atomics.cuh  constants.cuh  dq.cuh  heap.cuh  packed.cuh  rvt.cuh  task.cuh  telemetry.cuh  tq.cuh  vt.cuh
FlashMoE/csrc/tests/: combine.cu  common.cuh  flashmoe.cu  gate.cu  gatedGEMM.cu  gemm.cu  gemmMNK.cu  playground.cu  scheduler.cu
FlashMoE/flashmoe/: CMakeLists.txt  __init__.py  bindings.py  cb.py  jit.py  reference.py  router.py
vllm/: .gitignore  AGENTS.md
vllm/benchmarks/kernels/: benchmark_deepep_ht_assignment_gemm.py  benchmark_flashmoe.py  benchmark_moe_ep_a40.py  benchmark_moe_w1_triton_sweep.py  benchmark_moe_w2_triton_sweep.py  sweep_moe_ep_a40.py
vllm/benchmarks/results/: a100_sxm_moe_ep_bottleneck.md  a100_sxm_moe_ep_code_changes.md  a100_sxm_qwen3_deepep_ht_moe_ep.topology.txt  a40_moe_ep_bottleneck.md  a40_moe_ep_conversation_log.md  a40_quick_moe_ep.topology.txt  analyze_deepep_ht_paired.py  deepep_ht_block_m_combined_ablation_20260621_3seed_raw.csv  deepep_ht_block_m_combined_ablation_20260621_3seed_summary.md  deepep_ht_block_m_correctness_tokens320_20260621.json  deepep_ht_block_m_correctness_tokens448_20260621.json  deepep_ht_block_m_screening_20260621_3seed_raw.csv  deepep_ht_block_m_screening_20260621_3seed_summary.md  deepep_ht_block_m_screening_20260621_lazy_assignment_smoke_raw.csv  deepep_ht_block_m_w1_w2_split_20260621_3seed_raw.csv  deepep_ht_block_m_w1_w2_split_20260621_3seed_summary.md  deepep_ht_break_even_m_20260620_raw.csv  deepep_ht_break_even_sub254_20260621_3seed_raw.csv  deepep_ht_break_even_sub254_20260621_3seed_summary.md  deepep_ht_final_both64_profile_20260621_raw.csv  deepep_ht_final_correctness_20260621_summary.md  deepep_ht_final_correctness_rank128_512_20260621.json  deepep_ht_final_correctness_rank128_512_target0_20260621.json  deepep_ht_final_correctness_rank128_512_target1_20260621.json  deepep_ht_final_correctness_tokens320_20260621.json  deepep_ht_final_correctness_tokens448_20260621.json  deepep_ht_final_cumulative_ablation_20260621_3seed_raw.csv  deepep_ht_final_cumulative_ablation_20260621_3seed_summary.md  deepep_ht_fixed_capacity_profile_20260621_raw.csv  deepep_ht_fixed_capacity_safety_correctness_rank128_512_20260621.json  deepep_ht_fixed_capacity_safety_correctness_rank128_512_target0_20260621.json  deepep_ht_fixed_capacity_safety_correctness_rank128_512_target1_20260621.json  deepep_ht_fixed_capacity_safety_correctness_rank512_128_20260621.json  deepep_ht_fixed_capacity_vs_final_20260621_3seed_raw.csv  deepep_ht_fixed_capacity_vs_final_20260621_3seed_summary.md  deepep_ht_fixed_raw_vs_remap_20260621_3seed_raw.csv  deepep_ht_fixed_raw_vs_remap_20260621_3seed_summary.md  deepep_ht_paired_ignore_20260620_raw.csv  deepep_ht_rank_distinct_seed_20260620_raw.csv  deepep_ht_raw_negative_correctness_tokens320_20260621.json  (+9 more)
vllm/benchmarks/results/deepep_ht_final_both64_profile_20260621/: block-m-combined-ablation_tokens320_seed1007_cycle1_filtering.rank0.json  block-m-combined-ablation_tokens320_seed1007_cycle1_filtering.rank1.json  block-m-combined-ablation_tokens320_seed1007_cycle1_final_both_64.rank0.json  block-m-combined-ablation_tokens320_seed1007_cycle1_final_both_64.rank1.json  block-m-combined-ablation_tokens320_seed1007_cycle1_original.rank0.json  block-m-combined-ablation_tokens320_seed1007_cycle1_original.rank1.json  block-m-combined-ablation_tokens448_seed1007_cycle1_filtering.rank0.json  block-m-combined-ablation_tokens448_seed1007_cycle1_filtering.rank1.json  block-m-combined-ablation_tokens448_seed1007_cycle1_final_both_64.rank0.json  block-m-combined-ablation_tokens448_seed1007_cycle1_final_both_64.rank1.json  block-m-combined-ablation_tokens448_seed1007_cycle1_original.rank0.json  block-m-combined-ablation_tokens448_seed1007_cycle1_original.rank1.json
vllm/benchmarks/results/deepep_ht_fixed_capacity_profile_20260621/: block-m-sweep_tokens320_seed1007_cycle1_block_both_64.rank0.json  block-m-sweep_tokens320_seed1007_cycle1_block_both_64.rank1.json  block-m-sweep_tokens320_seed1007_cycle1_block_fixed_both_64.rank0.json  block-m-sweep_tokens320_seed1007_cycle1_block_fixed_both_64.rank1.json  block-m-sweep_tokens448_seed1007_cycle1_block_both_64.rank0.json  block-m-sweep_tokens448_seed1007_cycle1_block_both_64.rank1.json  block-m-sweep_tokens448_seed1007_cycle1_block_fixed_both_64.rank0.json  block-m-sweep_tokens448_seed1007_cycle1_block_fixed_both_64.rank1.json
vllm/csrc/libtorch_stable/moe/: moe_align_sum_kernels.cu
vllm/docs/design/: multi_gpu_kernels_ko.md
vllm/tests/kernels/moe/: test_deepep_ht_expert_assignment.py  test_moe_align_block_size.py
vllm/vllm/: envs.py
vllm/vllm/config/: kernel.py
vllm/vllm/distributed/: parallel_state.py
vllm/vllm/distributed/device_communicators/: all2all.py  base_device_communicator.py  cpu_communicator.py  cuda_communicator.py  xpu_communicator.py
vllm/vllm/model_executor/layers/fused_moe/: a100_moe_kernels.py  deepep_ht_expert_assignment.py  fused_moe.py  modular_kernel.py  moe_align_block_size.py  moe_fused_mul_sum.py  moe_masked_activation.py  routed_experts.py  topk_weight_and_reduce.py  unquantized_fused_moe_method.py
vllm/vllm/model_executor/layers/fused_moe/configs/: E=128,N=768,device_name=NVIDIA_A40.json  E=64,N=768,device_name=NVIDIA_A40.json
vllm/vllm/model_executor/layers/fused_moe/experts/: flashmoe.py  triton_moe.py
vllm/vllm/model_executor/layers/fused_moe/oracle/: unquantized.py
vllm/vllm/model_executor/layers/fused_moe/prepare_finalize/: deepep_ht.py  naive_dp_ep.py
vllm/vllm/model_executor/layers/fused_moe/runner/: moe_runner.py
